--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ nav {
 
 .logo {
     width: 150px;
+    
+}
+.logo.dark {
+    width: 150px;
 }
 
 
@@ -489,3 +493,20 @@ footer a:hover {
     text-decoration: underline;
 }
 /*----------------
+
+
+/* Ensure the video fills the viewport */
+#background-video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1; /* Make sure the video is behind other content */
+    background: url('path/to/your/fallback-image.jpg') no-repeat;
+    background-size: cover;
+}
+
+/* Style for the content on top of the video */
